# git-wt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  UX-REDESIGN.md  _alias.sh  build.sh  docker-test.sh  install-linux.sh  install-mac.sh  install.sh  installer.tmpl.sh  linux-test.sh  release.sh  test-linux.sh  test-mac.sh  test.sh
docs/: COMMANDS.md  COMMITS-FILES.md  CROSS-PLATFORM-ISSUES.md  FILTERED-MELD-PLAN.md  FUTURE-FEATURES.md  LIVE-DIFF.md  MANUAL.md  MERGED-OTHERS.md  MODERN-UI-ENHANCEMENTS.md  PLAN-clap-grammar-rework.md  PLAN-commits-default-diverged.md  PLAN-commits-search-filters.md  PLAN-file-log.md  PLAN-merge-review.md  PLAN-projected-prod-compare.md  PLAN-short-aliases.md  PLAN-split-main-into-modules.md  baseline-tests.txt  clap-kimi.md  test-report.md
src/: cli.rs  git.rs  main.rs  ui.rs  worktree.rs
src/cmd/: add.rs  commits.rs  diff.rs  doctor.rs  list.rs  meld.rs  merge.rs  merged.rs  mod.rs  remove.rs  sync.rs
src/cmd/add/: args.rs  mod.rs
src/cmd/commits/: args.rs  md.rs  mod.rs  render.rs  rows.rs
src/cmd/diff/: args.rs  mod.rs
src/cmd/doctor/: args.rs  mod.rs
src/cmd/list/: args.rs  mod.rs
src/cmd/log/: mod.rs  paths.rs  render.rs
src/cmd/meld/: args.rs  mod.rs
src/cmd/merge/: args.rs  mod.rs
src/cmd/merged/: args.rs  mod.rs
src/cmd/remove/: args.rs  mod.rs
src/cmd/switch/: args.rs  mod.rs
src/cmd/sync/: args.rs  mod.rs
