[package]
name = "git-wt"
version = "1.3.14"
edition = "2021"
description = "Create git worktrees in sibling directories named <repo>-<branch>"

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
